--- a/roles/create_newuser/tasks/main.yml
+++ b/roles/create_newuser/tasks/main.yml
@@ -1,3 +1,17 @@
+- name: Make sure a wheel group is present
+  group:
+    name: wheel
+    state: present
+- name: allow 'wheel' group to have passwordless sudo
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: '^%wheel'
+    line: '%wheel ALL=(ALL) NOPASSWD:ALL'
 - user:
     name: manager
     group: wheel
+    append: yes
+    state: present
+
+
