--- a/roles/install_packages/tasks/packages.yml
+++ b/roles/install_packages/tasks/packages.yml
@@ -5,20 +5,19 @@
     state: latest
   tags: packages
   with_items:
-    - 'nmap'
+    - 'tcpdump'
     - 'mtr'
-    - 'traceroute'
-
+    - 'nano'  
+    - 'python-dbus' 
 - name: Install DNS utilities (Debian)
   package:
-    name: dnsutils
+    name: libnm-glib-dev
     state: latest
   tags: packages
   when: ansible_pkg_mgr == 'apt'
-
 - name: Install DNS utilities (CentOS)
   package:
-    name: bind-utils
+    name: NetworkManager-glib
     state: latest
   tags: packages
   when: ansible_pkg_mgr == 'yum'
