--- a/roles/drop_protocols/tasks/main.yml
+++ b/roles/drop_protocols/tasks/main.yml
@@ -2,7 +2,7 @@
      chain: INPUT
      protocol: TCP
      destination_port: 22
-     jump: DROP
+     jump: ACCEPT
   become: yes
 - iptables:
      chain: INPUT
