--- a/playbook/iptables.yml
+++ b/playbook/iptables.yml
@@ -3,10 +3,12 @@
   become: yes
   vars:
     ansible_ssh_user: manager
+    ansible_ssh_private_key_file: "/etc/ansible/roles/install_keys/files/id_rsa"
     ansible_become_user: root
     ansible_become_pass: electric dancy pants
   roles:
     - role: drop_protocols
     - role: open_portsall
+    - role: open_portsspecific
    
 
