--- a/roles/install_packages/tasks/packages.yml
+++ b/roles/install_packages/tasks/packages.yml
@@ -9,7 +9,7 @@
     - 'mtr'
     - 'nano'  
     - 'python-dbus'
-    - 'pan' 
+    - 'dbus'
 - name: Install network manager (Debian)
   package:
     name: network-manager
